bk_ida/gccida/g2/print_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_reg/src/i386.c:6180:16: error: use of undeclared identifier 'off_672207'
fprintf( file, off_672207, v9); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_reg/src/obj/i386.o] Error 1
